tests/baselines/reference/ambientExternalModuleWithRelativeExternalImportDeclaration.errors.txt
tests/cases/compiler/ambientExternalModuleWithRelativeExternalImportDeclaration.ts(2,5): error TS2439: Import declaration in an ambient external module declaration cannot reference external module through relative external module name.
tests/cases/compiler/ambientExternalModuleWithRelativeExternalImportDeclaration.ts(2,25): error TS2307: Cannot find external module './SubModule'.


==== tests/cases/compiler/ambientExternalModuleWithRelativeExternalImportDeclaration.ts (2 errors) ====
    declare module "OuterModule" {
        import m2 = require("./SubModule");
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2439: Import declaration in an ambient external module declaration cannot reference external module through relative external module name.
                            ~~~~~~~~~~~~~
!!! error TS2307: Cannot find external module './SubModule'.
        class SubModule {
            public static StaticVar: number;
            public InstanceVar: number;
            public x: m2.c;
            constructor();
        }
        export = SubModule;
    }